--- a/web/styles/portico/billing.css
+++ b/web/styles/portico/billing.css
@@ -374,7 +374,7 @@ input[name="licenses"] {
     & select {
         height: 30px;
         width: 100%;
-        padding: 4px 6px;
+        padding: 0 6px;
         font-size: 14px;
         color: hsl(0deg 0% 33%);
         border-radius: 4px;
