--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -370,7 +370,7 @@ td .button {
 /* list_select is similar to settings_select, but without the height styling. */
 .settings_select,
 .list_select {
-    padding: 4px 6px;
+    padding: 0 6px;
     color: hsl(0deg 0% 33%);
     border-radius: 4px;
     border: 1px solid hsl(0deg 0% 80%);
