--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -2477,7 +2477,7 @@ select.custom-expiration-time,
 select.invite-as {
     width: 220px;
     height: 30px;
-    padding: 4px 6px;
+    padding: 0 6px;
     color: hsl(0deg 0% 33%);
     border-radius: 4px;
     border: 1px solid hsl(0deg 0% 80%);
